# smart_plug

./: Doxyfile  Makefile  README.md  Readme  gdbcmd  gen_misc.sh
data/: Makefile  data.c  data.h  data_config.h  flash.c  flash.h  flash_utils.c  flash_utils.h
devices/: plug.device_info
driver/: Makefile  gpio.c  gpio.h  hw_timer.h  uart.c
flash/: Makefile  flash.c  flash.h  flash_hal.c  flash_hal.h  flash_utils.h
html/: index.html
html/css/: styles.css
html/js/: main.js
include/: device_info.h  light_http.h  user_config.h  user_data_config.h  user_http_handlers.h  user_light_http_config.h  user_mesh_config.h  user_mesh_handlers.h  user_power.h  user_wifi.h  wifi_station.h
include/xtensa/: xtruntime-frames.h
light_http/: asio_light_http.c  asio_light_http.h  light_http.c  light_http.h  light_http_config.h
light_http_back/: Makefile  asio_light_http.c  light_http.c  light_http.h
mesh/: Makefile  device_info.h  esp_mesh.c  esp_mesh.h  mesh.c  mesh.h  mesh_config.h  mesh_device_info.h  mesh_message.c  mesh_message.h  mesh_sender_info.h  message.c  message.h  sender_info.h
mesh_stub/: CMakeLists.txt
mesh_stub/src/: main.cpp  mesh_platform.cpp  mesh_platform.h
user/: Makefile  light_http.c  user_http_handlers.c  user_main.c  user_mesh.c  user_mesh.h  user_mesh_handlers.c  user_power.c  user_power.h  user_wifi.c  wifi_station.c
